--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gulp-file-include": "^2.2.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build"
   },
   "author": "",
   "license": "ISC"
