--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-file-include": "^2.2.2",
+    "gulp-image-resize": "^0.13.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-file-include": "^2.2.2"
+    "gulp-webp": "^4.0.1"
   },
   "scripts": {
     "build": "gulp build"
