--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "i18n-ally.localesPaths": "src/lang",
     "i18n-ally.keystyle": "nested",
-    "i18n-ally.namespace": true
+    "i18n-ally.namespace": true,
+    "i18n-ally.sourceLanguage": "de"
 }
