--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-image-resize": "^0.13.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sitemap": "^8.0.0",
     "gulp-webp": "^4.0.1"
   },
   "scripts": {
