--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-file-include": "^2.2.2",
     "gulp-if": "^3.0.0",
     "gulp-image-resize": "^0.13.1",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
     "gulp-sitemap": "^8.0.0",
     "gulp-webp": "^4.0.1"
   },
